# HealthStone

./: HealthStone.drawio  Practicing-c++-v1.0.txt  README.md
HealthStone/: CMakeLists.txt  CMakelists.txt  build.sh  main.cpp
HealthStone/inc/: Card.hpp  CardManager.hpp  Console.hpp  ConsoleCbk.hpp  GameController.hpp  Hero.hpp  HeroManager.hpp  HighlightHelper.hpp  Socket.hpp  Unit.hpp  UnitManager.hpp
HealthStone/src/: CardManager.cpp  Console.cpp  GameController.cpp  Hero.cpp  HeroManager.cpp  Socket.cpp
